crates/js/src/snapshots/sprefa_js__tests__default_imports.snap
---
source: crates/js/src/lib.rs
expression: refs
---
- value: react
  span_start: 19
  span_end: 24
  kind: import_path
  rule_name: import_path
  is_path: true
  parent_key: ~
  node_path: ~
  group: 0
- value: express
  span_start: 48
  span_end: 55
  kind: import_path
  rule_name: import_path
  is_path: true
  parent_key: ~
  node_path: ~
  group: 1
- value: default
  span_start: 0
  span_end: 0
  kind: import_name
  rule_name: import_name
  is_path: false
  parent_key: ~
  node_path: ~
  group: 2
- value: React
  span_start: 7
  span_end: 12
  kind: import_alias
  rule_name: import_alias
  is_path: false
  parent_key: default
  node_path: ~
  group: 3
- value: default
  span_start: 27
  span_end: 27
  kind: import_name
  rule_name: import_name
  is_path: false
  parent_key: ~
  node_path: ~
  group: 4
- value: express
  span_start: 34
  span_end: 41
  kind: import_alias
  rule_name: import_alias
  is_path: false
  parent_key: default
  node_path: ~
  group: 5
