crates/js/src/snapshots/sprefa_js__tests__named_imports.snap
---
source: crates/js/src/lib.rs
expression: refs
---
- value: "./utils"
  span_start: 26
  span_end: 33
  kind: import_path
  rule_name: js
  is_path: true
  parent_key: ~
  node_path: ~
- value: "../types"
  span_start: 62
  span_end: 70
  kind: import_path
  rule_name: js
  is_path: true
  parent_key: ~
  node_path: ~
- value: foo
  span_start: 9
  span_end: 12
  kind: import_name
  rule_name: js
  is_path: false
  parent_key: ~
  node_path: ~
- value: bar
  span_start: 14
  span_end: 17
  kind: import_name
  rule_name: js
  is_path: false
  parent_key: ~
  node_path: ~
- value: Baz
  span_start: 50
  span_end: 53
  kind: import_name
  rule_name: js
  is_path: false
  parent_key: ~
  node_path: ~
